@@ -25,9 +25,15 @@
 !LSHIFT 1 7
 !RSHIFT 6 4
 
-Alt_L 7 5 8
+# Tab = CTRL
+Tab 7 2 8
+# Shift + Tab = CTRL
+ISO_Left_Tab 7 2 8
+
+# Control_L = CBM
+Control_L 7 5 8
+
 BackSpace 0 0 8
-Control_L 7 2 8
 Delete 0 0 8
 Escape 7 7 8
 Home 6 3 8
@@ -36,7 +42,6 @@ KP_F1 0 4 8
 KP_F2 0 5 8
 KP_F3 0 6 8
 KP_F4 0 2 8
-Meta_L 7 5 8
 Return 0 1 8
 Shift_L 1 7 2
 Shift_R 6 4 0
